# DeerLang

./: .gitignore  CMakeLists.txt  README.md  list.c
asm/: cpp.asm
c/: Makefile
c/inc/back/: semantic_analyzer.h
c/inc/backend/: code_generator.h  execute.h  generator.h  semantic_analyzer.h
c/inc/common/: funcs.h  global_funcs.h  global_instance.h  global_macro.h  global_struct.h  macro.h
c/inc/front/: lexical_analysis.h  syntax_analyzer.h
c/inc/frontend/: lexical_analyzer.h
c/inc/kits/: arguments.h  file_operator.h  generate.h  token_list.h  (+1 more)
c/src/: main.c
contrib/bridge/: func.h  list.h  map.h  node.h  pair.h  vector.h
cpp/: CodeGenerator.hpp  Instruction.hpp  LexerStage.hpp  LexicalAnalyzer.hpp  SyntaxAnalyzer.hpp  Token.h  Token.hpp
include/access/: compiler.h
include/backend/: execute.h  generator.h  semantic.h
include/common/: funcs.h  list.h  macro.h  print.h  struct.h  tree.h  vector.h
include/frontend/: lexical.h  syntax.h
kits/: CMakeLists.txt
kits/list/: CMakeLists.txt  test.c
kits/map/: map.c
kits/vector/: CMakeLists.txt  test.c
kits/vector/inc/: vector.h
kits/vector/src/: vector.c
libs/: CMakeLists.txt
libs/list/: CMakeLists.txt  list.c  test.c
libs/list/inc/: list.h
libs/list/src/: list.c
libs/list/test/: CMakeLists.txt  test.c
libs/vector/: vector.c
source/: CMakeLists.txt
source/access/: main.c
source/backend/: execute.c  generator.c  semantic.c
source/common/: funcs.c  list.c  print.c  tree.c  vector.c
source/frontend/: lexical.c  syntax.c
src/: CMM.hpp  CMakeLists.txt  Constants.hpp  Core.h  Core.hpp  LexicalAnalyzer.h  LexicalAnalyzer.hpp  Makefile  Token.h  Token.hpp  TokenType.hpp
src/access/: main.c
src/backend/: generator.c
src/common/: funcs.c  list.c
src/frontend/: lexical.c  syntax.c
src/include/backend/: semantic.h
src/include/common/: funcs.h  list.h  macro.h  struct.h
src/include/frontend/: lexical.h  syntax.h
test/: CMakeLists.txt  test.c  testA.cmm  testB.cmm
test/case/: case3.deer
(+35 files in other folders)
