INCLUDE_DIRECTORIES(BEFORE 
    ${PROJECT_SOURCE_DIR}/include
)

AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/source/common/. DIR_COMMON)
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/source/frontend/. DIR_FRONTEND)
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/source/backend/. DIR_BACKEND)
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/source/access/. DIR_ACCESS)

ADD_EXECUTABLE(DeerCompiler ${DIR_COMMON} ${DIR_FRONTEND} ${DIR_BACKEND} ${DIR_ACCESS})

TARGET_LINK_LIBRARIES(DeerCompiler pthread)