INCLUDE_DIRECTORIES(BEFORE include)

AUX_SOURCE_DIRECTORY(./common/. DIR_COMMON)
AUX_SOURCE_DIRECTORY(./frontend/. DIR_FRONTEND)
AUX_SOURCE_DIRECTORY(./backend/. DIR_BACKEND)
AUX_SOURCE_DIRECTORY(./access/. DIR_ACCESS)

ADD_EXECUTABLE(lcompiler ${DIR_COMMON} ${DIR_FRONTEND} ${DIR_BACKEND} ${DIR_ACCESS})
