FIND_PACKAGE(GTest REQUIRED)

# INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(../src/include/)

ADD_EXECUTABLE(
    test
    test.c
)

SET(OPENCV_DYNAMIC_LIBS "${CMAKE_CURRENT_SOURCE_DIR}/")

SET(CMAKE_C_FLAGS " -std=gnu99 -g -O0 ") 

TARGET_LINK_LIBRARIES(
    test
    pthread
    # ${GTEST_BOTH_LIBRARIES}
)

# GTEST_DISCOVER_TESTS(test)