PROJECT(llist)
CMAKE_MINIMUM_REQUIRED(VERSION 3.23)

SET(CMAKE_C_FLAGS "-std=c2x -g -O0 -Werror -fPIC -Wall")

INCLUDE_DIRECTORIES(BEFORE inc)

AUX_SOURCE_DIRECTORY(./src/. SRC_LIST_SOURCE)

ADD_LIBRARY(llist SHARED ${SRC_LIST_SOURCE})

ADD_EXECUTABLE(test test.c)

TARGET_LINK_LIBRARIES(test llist pthread)